组件cart 提供服务

--- a/export_cart/.gitignore
+++ b/export_cart/.gitignore
@@ -1,1 +1,3 @@
 /build
+/src/androidTest/java/com/hfy/export_cart/ExampleInstrumentedTest.java
+/src/test/java/com/hfy/export_cart/ExampleUnitTest.java
