--- a/module_cart/build.gradle
+++ b/module_cart/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.1'
     implementation 'com.github.hufeiyang:Common:1.0.0'
 
-    implementation 'com.github.hufeiyang.Cart:export_cart:1.0.3'
+    //依赖export_cart
+    implementation 'com.github.hufeiyang.Cart:export_cart:1.0.5'
 
 }
